// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`search-bar render default 1`] = `

<div>
  <div class="relative flex grow items-center">
    <input
      type="text"
      class="clear-none flex h-10 w-full rounded-md border border-input bg-white px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 dark:bg-muted-foreground/5 undefined"
      role="search"
      placeholder="Query Lookup, e.g: :root > *"
      value=":root"
    >
  </div>
</div>

`;

exports[`search-bar render with custom query 1`] = `

<div>
  <div class="relative flex grow items-center">
    <input
      type="text"
      class="clear-none flex h-10 w-full rounded-md border border-input bg-white px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 dark:bg-muted-foreground/5 undefined"
      role="search"
      placeholder="Query Lookup, e.g: :root > *"
      value="[name=&quot;my-package&quot;][version=&quot;1.0.0&quot;]"
    >
  </div>
</div>

`;
